--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "jquery": "^3.5.1",
     "odex": "^2.0.4",
+    "postprocessing": "^6.18.0",
     "three": "^0.122.0",
     "three-orbit-controls": "^82.1.0"
   },
