--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postprocessing": "^6.18.0",
     "three": "^0.122.0",
     "three-dat.gui": "^2.0.7",
-    "three-orbit-controls": "^82.1.0"
+    "three-orbit-controls": "^82.1.0",
+    "three.meshline": "^1.3.0"
   },
   "devDependencies": {
     "browserify": "^17.0.0"
